Fix EZP-20289 Symfony CSRF protection not integrated with legacy
This is the legacy side of things, Symfony aligninment on how csrf is dealt with.

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -313,6 +313,11 @@ QuickSettingsList[]=TemplateSettings;ShowXHTMLCode;site.ini;Inline template debu
 QuickSettingsList[]=TemplateSettings;ShowUsedTemplates;site.ini;List of used templates
 QuickSettingsList[]=DatabaseSettings;SQLOutput;site.ini;SQL debug output
 
+[HTMLForms]
+## Settings dealing with HTML forms and security aspects of it.
+# Setting to specify a secret for the csrf protection, it
+# is highly recommended that you specify this pr project.
+Secret=ThisTokenIsNotSoSecretChangeIt
 
 [URLTranslator]
 # Controls whether the url translation is enabled or not.
